--- a/main.html
+++ b/main.html
@@ -21,12 +21,12 @@
 
   <!-- Button Row 2: Full-width warning button -->
   <div class="mb-2">
-    <button id="button-5" class="btn btn-warning btn-lg w-100">Button-5</button>
+<button id="button-5" class="btn btn-warning btn-lg vw-100">Button-5</button>
   </div>
 
   <!-- Buttons Row 3 -->
   <div class="mb-2">
-    <button id="button-6" class="btn btn-info" disabled>Button-6</button>
+<button id="button-6" class="btn btn-info disabled" disabled>Button-6</button>
     <button id="button-7" class="btn btn-light">Button-7</button>
     <button id="button-8" class="btn btn-link">Button-8</button>
   </div>
